--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -283,10 +283,10 @@
 
 .text1{
   font-size: 20px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: var(--font1);
 }
-
 
 .title{
   font-size: 50px;
+  font-family: var(--font1);
 }
