--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,7 @@
   --card-border-rgb: 131, 134, 135;
 
   --light-orange: #fae6aed1;
+  --font1: 'Open Sans';
 }
 
 @media (prefers-color-scheme: dark) {
