--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,7 +4,9 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
-  margin-top: 30px;
+  gap:30px;
+  font-size: 18px;
+  font-family: 'Open San';
   background-color: var(--light-orange);
 }
 
