--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -137,6 +137,10 @@ button{
   z-index: -1;
 }
 
+.title{
+  font-size: 50px;
+}
+
 /* Conic Gradient Animation */
 .thirteen::before {
   animation: 6s rotate linear infinite;
