--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   padding: 6rem;
   min-height: 100vh;
   font-size: 20px;
+  justify-content: space-between;
   background-color: var(--light-orange);
 }
 
@@ -148,6 +149,12 @@ button{
   width: 100px;
   height: 30px;
 }
+
+.buttons{
+  border-radius: 30px;
+  font-size: 20px;
+}
+
 
 /* Conic Gradient Animation */
 .thirteen::before {
